content/shell/browser/shell_platform_data_aura.cc
@@ -11,6 +11,7 @@
 #include "ui/aura/env.h"
 #include "ui/aura/layout_manager.h"
 #include "ui/aura/test/test_focus_client.h"
+#include "ui/aura/test/test_screen.h"
 #include "ui/aura/test/test_window_parenting_client.h"
 #include "ui/aura/window.h"
 #include "ui/aura/window_event_dispatcher.h"
@@ -24,6 +25,10 @@
 #if defined(OS_FUCHSIA)
 #include <fuchsia/ui/policy/cpp/fidl.h>
 #include "base/fuchsia/component_context.h"
+#endif
+
+#if defined(USE_OZONE)
+#include "ui/aura/screen_ozone.h"
 #endif
 
 namespace content {
@@ -78,6 +83,27 @@ ShellPlatformDataAura* Shell::platform_ = nullptr;
 ShellPlatformDataAura::ShellPlatformDataAura(const gfx::Size& initial_size) {
   CHECK(aura::Env::GetInstance());
 
+  // Setup global display::Screen singleton.
+  if (!display::Screen::GetScreen()) {
+#if defined(USE_OZONE)
+    auto platform_screen = ui::OzonePlatform::GetInstance()->CreateScreen();
+    if (platform_screen)
+      screen_ = std::make_unique<aura::ScreenOzone>(std::move(platform_screen));
+#endif  // defined(USE_OZONE)
+
+    // Use aura::TestScreen for Ozone platforms that don't provide
+    // PlatformScreen.
+    // TODO(https://crbug.com/872339): Implement PlatformScreen for all
+    // platforms and remove this code.
+    if (!screen_) {
+      // Some layout tests expect to be able to resize the window, so the screen
+      // must be larger than the window.
+      screen_.reset(
+          aura::TestScreen::Create(gfx::ScaleToCeiledSize(initial_size, 2.0)));
+    }
+    display::Screen::SetScreenInstance(screen_.get());
+  }
+
   ui::PlatformWindowInitProperties properties;
   properties.bounds = gfx::Rect(initial_size);
 
@@ -113,7 +139,10 @@ ShellPlatformDataAura::ShellPlatformDataAura(const gfx::Size& initial_size) {
       new aura::test::TestWindowParentingClient(host_->window()));
 }
 
-ShellPlatformDataAura::~ShellPlatformDataAura() = default;
+ShellPlatformDataAura::~ShellPlatformDataAura() {
+  if (screen_)
+    display::Screen::SetScreenInstance(nullptr);
+}
 
 void ShellPlatformDataAura::ShowWindow() {
   host_->Show();
