webrunner/browser/webrunner_browser_main_parts.h
@@ -13,11 +13,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "content/public/browser/browser_main_parts.h"
 #include "webrunner/fidl/chromium/web/cpp/fidl.h"
 
+namespace display {
+class Screen;
+}
+
 namespace webrunner {
 
 class ContextImpl;
 class WebRunnerBrowserContext;
-class WebRunnerScreen;
 
 class WebRunnerBrowserMainParts : public content::BrowserMainParts {
  public:
@@ -31,7 +34,7 @@ class WebRunnerBrowserMainParts : public content::BrowserMainParts {
  private:
   zx::channel context_channel_;
 
-  std::unique_ptr<WebRunnerScreen> screen_;
+  std::unique_ptr<display::Screen> screen_;
   std::unique_ptr<WebRunnerBrowserContext> browser_context_;
 
   std::unique_ptr<ContextImpl> context_impl_;
